--- a/src/main/resources/activiti-app.properties
+++ b/src/main/resources/activiti-app.properties
@@ -77,4 +77,13 @@ server.context-path=/activiti-app
 #禁用spring security的能力
 #security.ignored=/**
 
+#Redis配置
+spring.redis.database=0
+spring.redis.host=redis
+spring.redis.port=6379
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=0
+spring.redis.pool.min-idle=0
+spring.redis.pool.timeout=0
 
