增加zlst-base-redis 依赖,修改数据库配置

--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,34 @@
             <artifactId>zlst-base-param</artifactId>
             <version>1.0.7</version>
         </dependency>
+
+		<dependency>
+			<groupId>com.zlst</groupId>
+			<artifactId>zlst-base-redis</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-autoconfigure</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-aop</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-web</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-autoconfigure</artifactId>
+				</exclusion>
+			</exclusions>
+			<version>2.2</version>
+		</dependency>
 		
 	</dependencies>
 
