--- a/src/main/resources/activiti-app.properties
+++ b/src/main/resources/activiti-app.properties
@@ -10,15 +10,15 @@ appconf.security.rememberme.key=testkey
 #datasource.driver=org.h2.Driver
 #datasource.url=jdbc:h2:mem:activiti;DB_CLOSE_DELAY=-1
 
-datasource.driver=com.mysql.jdbc.Driver
-datasource.url=jdbc:mysql://192.168.10.25:3306/zlst-activity?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+datasource.driver=oracle.jdbc.OracleDriver
+datasource.url=jdbc:oracle:thin:@192.168.10.215:1521/orclpdb
 
-datasource.username=zlst-activity
+datasource.username=ACTIVITY
 datasource.password=123456
 
 #hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+#hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 #hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #hibernate.dialect=org.hibernate.dialect.DB2Dialect
 #hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
